Adjust configuration.tmpl to use recently-added DNFA_ namespace/prefix.

--- a/configuration.tmpl
+++ b/configuration.tmpl
@@ -5,7 +5,7 @@ export DNFA_projectRoot=`pwd`
 #                 local directory of your choosing)
 export DNFA_genfilesRoot="/usr/local/DNFA-genfiles"
 
-export DNFA_generatedDataRoot="${genfilesRoot}/data"
-export DNFA_starRoot="${genfilesRoot}/STAR"
+export DNFA_generatedDataRoot="${DNFA_genfilesRoot}/data"
+export DNFA_starRoot="${DNFA_genfilesRoot}/STAR"
 
 export DNFA_raw_data_basedir="/usr/local/DNFA-rawdata/Testrun/Nextseq_Test-32743727"
